failing compile, uploaded to have a reference for bug report