@@ -30,6 +30,7 @@
                 <configuration>
                     <argLine>
                 --add-opens jamal.groovy/javax0.jamal.groovy=ALL-UNNAMED
+                        --add-reads jamal.groovy=jamal.engine
             </argLine>
                 </configuration>
             </plugin>
@@ -63,19 +64,19 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.0</version>
+            <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.9.0</version>
+            <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-jsr223</artifactId>
-            <version>3.0.12</version>
+            <version>3.0.15</version>
         </dependency>
     </dependencies>
 </project>
